--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">PickPick</string>
+
+    <!-- Error & Exception -->
+    <string name="error_network">네트워크 연결을 확인해주세요.</string>
+    <string name="error_timeout">연결 요청 시간이 초과되었습니다.</string>
+    <string name="error_unauthorized">로그인이 필요합니다.</string>
+    <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
+
 </resources>
