:sparkles: feat: 로그인 화면 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,32 @@
     <string name="error_unauthorized">로그인이 필요합니다.</string>
     <string name="error_unknown">알 수 없는 오류가 발생했습니다.</string>
 
+    <!-- Authentication -->
+    <string name="login">로그인</string>
+    <string name="signup">회원가입</string> <!-- 오타 수정: singup -> signup -->
+
+    <!-- Input Placeholders -->
+    <string name="email_placeholder">아이디를 입력해주세요.</string>
+    <string name="password_placeholder">비밀번호를 입력해주세요.</string> <!-- pw -> password로 명확화 -->
+    <string name="password_confirm_placeholder">비밀번호 확인</string>
+
+    <!-- Account Recovery -->
+    <string name="find_email">아이디 찾기</string>
+    <string name="find_password">비밀번호 찾기</string> <!-- pw -> password로 명확화 -->
+
+    <!-- Navigation Messages -->
+    <string name="go_to_login">로그인 하러가기</string>
+    <string name="not_member_yet">아직 회원이 아니신가요?</string>
+
+    <!-- Validation Error Messages -->
+    <string name="error_invalid_credentials">존재하지 않는 ID, 혹은 비밀번호가 틀렸습니다.</string>
+    <string name="error_email_not_exist">존재하지 않는 이메일 입니다.</string>
+    <string name="error_invalid_email_format">이메일 형식으로 입력해주세요.</string>
+    <string name="error_id_not_exist">존재하지 않는 ID입니다.</string>
+    <string name="error_password_mismatch">비밀번호가 일치하지 않습니다.</string>
+    <string name="password_validation_rule">영문자, 숫자, 특수문자(!, @, #, $, %, ^, &amp;)를 조합하여 8자 이상 15자 이하로 설정해 주세요.</string>
+
+    <!-- Policy -->
+    <string name="privacy_policy_check">개인정보처리방침 확인</string>
+
 </resources>
