✨ feat: 정보입력 닉네임 컴포넌트 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="email_placeholder">아이디를 입력해주세요.</string>
     <string name="password_placeholder">비밀번호를 입력해주세요.</string> <!-- pw -> password로 명확화 -->
     <string name="password_confirm_placeholder">비밀번호 확인</string>
+    <string name="nickname_placeholder">닉네임을 입력해주세요.</string>
 
     <!-- Account Recovery -->
     <string name="find_email">아이디 찾기</string>
@@ -50,5 +51,6 @@
 개인정보 처리 위탁 시, 외부 업체에 적절한 보호조치를 취하며, 사용자의 동의를 받습니다.</string>
 
     <string name="check">확인</string>
+    <string name="signup_complete">가입하기</string>
 
 </resources>
