--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,11 @@
 <resources>
     <string name="app_name">PickPick</string>
 
+    <!-- Common -->
+    <string name="check">확인</string>
+    <string name="complete">완료</string>
+    <string name="next">다음</string>
+
     <!-- Error & Exception -->
     <string name="error_network">네트워크 연결을 확인해주세요.</string>
     <string name="error_timeout">연결 요청 시간이 초과되었습니다.</string>
@@ -50,8 +55,25 @@
 본 서비스는 제3자에게 개인정보를 제공하지 않습니다.  다만, 외부 업체에 의뢰하여 서비스 제공, 결제 처리, 마케팅 활동을 할 수 있습니다.
 개인정보 처리 위탁 시, 외부 업체에 적절한 보호조치를 취하며, 사용자의 동의를 받습니다.</string>
 
-    <string name="check">확인</string>
-    <string name="complete">완료</string>
-    <string name="next">다음</string>
 
+    <!-- PickPick -->
+    <string name="second_timer">%ds</string>
+
+    <string name="select_background">배경을 선택해 주세요.</string>
+    <string name="auto_selection_timer">%d초 뒤 자동으로 선택됩니다.</string>
+    <string name="auto_progress_timer">%d초 뒤 자동으로 넘어갑니다.</string>
+    <string name="background_selected">배경이 선택되었습니다.</string>
+
+    <string name="position_selection_instruction">원하는 위치를 선택해주세요!</string>
+    <string name="photo_capture_instruction">사진을 찍어 주세요!</string>
+
+    <string name="within_time_limit">제한시간 내</string>
+
+    <string name="timeout_random_placement_warning">제한시간 내 칸을 고르지 못하면, 랜덤으로 배치돼요.</string>
+    <string name="timeout_auto_capture_warning">제한시간 내 사진을 찍지 못하더라도, 자동으로 캡쳐돼요.</string>
+
+
+    <string name="photo_capture_completed">사진 촬영 완료!</string>
+    <string name="navigate_to_photo_editor">사진 꾸미러 이동할게요</string>
+    
 </resources>
