--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="check">확인</string>
     <string name="complete">완료</string>
     <string name="next">다음</string>
+    <string name="delete">삭제</string>
+    <string name="cancel">취소</string>
 
     <!-- Error & Exception -->
     <string name="error_network">네트워크 연결을 확인해주세요.</string>
@@ -97,5 +99,9 @@
 
     <string name="photo_capture_completed">사진 촬영 완료!</string>
     <string name="navigate_to_photo_editor">사진 꾸미러 이동할게요</string>
+
+    <!-- Dialog -->
+    <string name="dialog_photo_delete_title">사진을 삭제하시겠습니까?</string>
+    <string name="dialog_photo_delete_sub_title">해당 작업은 되돌릴 수 없습니다.</string>
 
 </resources>
